--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
     sdk: flutter
   camera: ^0.10.5+9
   google_mlkit_text_recognition: ^0.13.0
-  permission_handler: ^11.3.1
+  permission_handler: ^12.0.0+1
   characters: ^1.3.0
   image: ^4.5.2
 
